--- a/rg_main_stack.yml
+++ b/rg_main_stack.yml
@@ -16,7 +16,8 @@ Parameters:
   AccessFromCidr:
     Description: Lockdown SSH and HTTPS access (default can be accessed from anywhere)
     Type: String
-    Default: 0.0.0.0/0
+    # Use specific IP addresses (Ex:192.168.1.5/32) for access from a known location.
+    Default: 192.168.1.0/24
     MinLength: "9"
     MaxLength: "18"
     AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
@@ -145,8 +146,8 @@ Resources:
         Ref: VPC
       SecurityGroupIngress:
         - IpProtocol: tcp
-          FromPort: "80"
-          ToPort: "80"
+          FromPort: "443"
+          ToPort: "443"
           CidrIp:
             Ref: AccessFromCidr
         - IpProtocol: tcp
